--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!--Хедер-->
     <header class="header">
-      <div class="container header__container">
+      <div class="header__container">
         <a class="header__link logo" href="./index.html"
           ><span class="header__accent logo">Web</span>Studio</a
         >
@@ -146,8 +146,8 @@
                 alt="людина набирає текст на лептопі"
                 width="370"
               />
-              <div class="img-desc">
-                <p class="img-desc-text">Десктопні додатки</p>
+              <div class="occupation__img">
+                <p class="occupation__text">Десктопні додатки</p>
               </div>
             </li>
             <li class="occupation__item card-set-item">
@@ -156,8 +156,8 @@
                 alt="людина тримає в руках телефон"
                 width="370"
               />
-              <div class="img-desc">
-                <p class="img-desc-text">Мобільні додатки</p>
+              <div class="occupation__img">
+                <p class="occupation__text">Мобільні додатки</p>
               </div>
             </li>
             <li class="occupation__item card-set-item">
@@ -166,8 +166,8 @@
                 alt="людина тримає в руках планшет"
                 width="370"
               />
-              <div class="img-desc">
-                <p class="img-desc-text">Дизайнерські рішення</p>
+              <div class="occupation__img">
+                <p class="occupation__text">Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
