--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>WebStudio(Version 2.1)</title>
   </head>
 
@@ -81,7 +81,7 @@
         </div>
       </section>
       <!--Особливості-->
-      <section class="features section">
+      <section class="features">
         <div class="container">
           <h2 class="features__title visually-hidden">Особливості</h2>
           <ul class="features__list list">
@@ -136,7 +136,7 @@
         </div>
       </section>
       <!--Чим ми займаємось-->
-      <section class="occupation section">
+      <section class="occupation">
         <div class="container">
           <h2 class="occupation__title">Чим ми займаємося</h2>
           <ul class="occupation__list card-set list">
@@ -174,7 +174,7 @@
         </div>
       </section>
       <!--Наша команда-->
-      <section class="team section">
+      <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list card-set list">
@@ -450,7 +450,7 @@
         </div>
       </section>
       <!-- Клієнти -->
-      <section class="clients section">
+      <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list card-set list">
