--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="./css/main.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  
   <title>Портфолио</title>
 </head>
 
@@ -64,8 +64,8 @@
   <!--Основний контент-->
   <main>
     <!--Проекти-->
-    <section class="portfolio__projects section">
-      <div class="portfolio__container container">
+    <section class="portfolio">
+      <div class="portfolio__container">
         <ul class="portfolio__btn list">
           <li class="portfolio__buttons">
             <button class="btn__item current" type="button">Вce</button>
